# EthDevWatchV1

./: .gitignore  .replit  README.md  app.py  backup_dev_20250119_213202.db  main.py  models.py  pyproject.toml  requirements.txt  routes.py  tools.py
instance/: development.db
instance/backups/dev/: backup_dev_20250119_224554.db
migrations/: add_blockchain_terms.py  add_content_hash.py  add_custom_url.py  add_forum_discussions.py  add_forum_summary.py  add_repo_update_sections.py  add_repository_to_source.py  add_subscribers.py  add_timestamps.py  add_weekly_metrics.py  cleanup_articles.py  cleanup_future_and_duplicate_articles.py  fix_article_dates.py  remove_all_articles.py  remove_duplicate_articles.py  remove_image_url.py
scripts/: backup_database.py  cleanup_future_articles.py  create_admin.py  generate_one_article.py  generate_past_articles.py  generate_sample_data.py  manage_scheduler.py  regenerate_articles.py  restore_database.py  update_forum_summaries.py  update_metrics.py
services/: article_generation_service.py  content_service.py  dune_service.py  forum_service.py  github_service.py  new_article_generation_service.py  scheduler.py  twitter_service.py
static/css/: custom.css
static/js/: article.js  search.js  term_translator.js
templates/: 404.html  _source_section.html  article.html  base.html  index.html  login.html
templates/admin/: article_form.html  backup_management.html  dashboard.html  update_credentials.html
